[workspace]
members = [
    "account-decoder",
    "accounts-bench",
    "accounts-cluster-bench",
]

exclude = [
    "programs/sbf",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "1.17.0"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
aes-gcm-siv = "0.10.3"
ahash = "0.8.3"
anyhow = "1.0.71"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.7"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-mutex = "1.4.0"
async-trait = "0.1.71"

[patch.crates-io]
# for details, see https://github.com/solana-labs/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/solana-labs/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }

# We include the following crates as our dependencies above from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-token
#  * spl-token-2022
#
# They, in turn, depend on a number of crates that we also include directly using `path`
# specifications.  For example, `spl-token` depends on `solana-program`.  And we explicitly specify
# `solana-program` above as a local path dependency:
#
#     solana-program = { path = "../../sdk/program", version = "=1.16.0" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `solana-program` dependency only using
# what is available on crates.io.  Crates.io normally contains a previous version of these crates,
# and we end up with two versions of `solana-program` and `solana-zk-token-sdk` and all of their
# dependencies in our build tree.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both comments and the
# overrides in sync.
solana-program = { path = "sdk/program" }
solana-zk-token-sdk = { path = "zk-token-sdk" }
